[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gfx/ui/panels/metal-panel-blue.png" type="Texture" id=1]
[ext_resource path="res://assets/themes/theme-numpad.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/ken-vector-future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/ui/Splash.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[node name="Splash" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="Center"]
margin_left = 312.0
margin_top = 100.0
margin_right = 712.0
margin_bottom = 500.0
rect_min_size = Vector2( 400, 400 )
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 40
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Margin" type="MarginContainer" parent="Center/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Center/Background/Margin"]
margin_left = 24.0
margin_top = 24.0
margin_right = 376.0
margin_bottom = 376.0
custom_constants/separation = 32
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Center/Background/Margin/VBox"]
margin_top = 27.0
margin_right = 352.0
margin_bottom = 173.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="Center/Background/Margin/VBox/VBoxContainer"]
margin_right = 352.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Welcome to"
align = 1

[node name="Title" type="Label" parent="Center/Background/Margin/VBox/VBoxContainer"]
margin_top = 35.0
margin_right = 352.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Heist
Meisters"
align = 1

[node name="Buttons" type="CenterContainer" parent="Center/Background/Margin/VBox"]
margin_top = 205.0
margin_right = 352.0
margin_bottom = 325.0

[node name="VBox" type="VBoxContainer" parent="Center/Background/Margin/VBox/Buttons"]
margin_left = 44.0
margin_right = 308.0
margin_bottom = 120.0
custom_constants/separation = 12

[node name="Start" type="HBoxContainer" parent="Center/Background/Margin/VBox/Buttons/VBox"]
margin_right = 264.0
margin_bottom = 32.0

[node name="StartButton" type="Button" parent="Center/Background/Margin/VBox/Buttons/VBox/Start"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="Label" type="Label" parent="Center/Background/Margin/VBox/Buttons/VBox/Start"]
margin_left = 36.0
margin_top = 2.0
margin_right = 264.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start Mission"

[node name="Tutorial" type="HBoxContainer" parent="Center/Background/Margin/VBox/Buttons/VBox"]
margin_top = 44.0
margin_right = 264.0
margin_bottom = 76.0

[node name="TutorialButton" type="Button" parent="Center/Background/Margin/VBox/Buttons/VBox/Tutorial"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="Label" type="Label" parent="Center/Background/Margin/VBox/Buttons/VBox/Tutorial"]
margin_left = 36.0
margin_top = 2.0
margin_right = 136.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Learn"

[node name="Quit" type="HBoxContainer" parent="Center/Background/Margin/VBox/Buttons/VBox"]
margin_top = 88.0
margin_right = 264.0
margin_bottom = 120.0

[node name="QuitButton" type="Button" parent="Center/Background/Margin/VBox/Buttons/VBox/Quit"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="Label" type="Label" parent="Center/Background/Margin/VBox/Buttons/VBox/Quit"]
margin_left = 36.0
margin_top = 2.0
margin_right = 104.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
[connection signal="pressed" from="Center/Background/Margin/VBox/Buttons/VBox/Start/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Center/Background/Margin/VBox/Buttons/VBox/Tutorial/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="Center/Background/Margin/VBox/Buttons/VBox/Quit/QuitButton" to="." method="_on_QuitButton_pressed"]
